<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_wallpaper3"
    android:orientation="vertical"
    tools:context="edess.example.webviewimagecollection.DetailsMoneyRequest" >

    <ScrollView
        android:id="@+id/scrollViewRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_fulln"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <TextView
            android:id="@+id/tvlaboName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_labo"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTvLaboName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_labn" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <TextView
            android:id="@+id/tvdatePay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_paymt"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSetDate"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/buttonshape"
            android:text="@string/set_dat" />

        <TextView
            android:id="@+id/tvShowDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DD/MM/YYYY"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <TextView
            android:id="@+id/tvhourPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_paymt"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSetTime"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/buttonshape"
            android:text="@string/set_time" />

        <TextView
            android:id="@+id/tvShowTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hh:mm"
            android:textColor="@color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/comment"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextComment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshape"
        android:text="@string/submit_req" />
    
      </LinearLayout>
    </ScrollView>

</LinearLayout>
