<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edess.example.webviewimagecollection.MainActivity" >

    <TextView
        android:id="@+id/tv0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcom_msg"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/useremail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/enter_email"
        android:singleLine="true"
        android:text=""
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:textStyle="italic"
        android:typeface="sans" >

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <CheckBox
            android:id="@+id/checkBoxRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember Me"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/ButtonLogin"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#1936F7"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="30sp" >

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/guide_girl"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="43dp"
            android:text="@string/AnnaWelcomeMsg"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>
   
</LinearLayout>